# AIDA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  release.sh  run.sh
.claude/: settings.local.json
src/: __init__.py  main.py
src/actions/: __init__.py  browser.py  calendar.py  fetch.py  files.py  food.py  home_assistant.py  mail.py  rss.py  search.py
src/ai/: __init__.py  llm.py
src/api/: server.py
src/api/static/: index.html
src/core/: __init__.py  assistant.py  audio_devices.py  config.py
src/memory/: __init__.py  context.py  conversation.py  database.py  embeddings.py  facts.py  manager.py
src/speech/: __init__.py  edge_tts.py  stt.py  tts.py  wakeword.py
src/tasks/: __init__.py  ha_sync.py  manager.py  models.py  reminders.py  store.py  voice_patterns.py
src/ui/: main_window.py  settings_dialog.py  tasks_window.py  tray.py  visualizer.py
src/vision/: __init__.py  camera.py  windows.py
tests/: __init__.py  test_config.py  test_tasks.py
